# generative-ai-inference

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: AIManager.h  M2M100Manager.h  ModelManager.h  T5Manager.h
lib/: CMakeLists.txt
src/: AIManager.cpp  Engine.cpp  M2M100Manager.cpp  ModelManager.cpp  RendererOGL.cpp  T5Manager.cpp  Window.cpp  main.cpp
